--- a/components/header.html
+++ b/components/header.html
@@ -12,7 +12,7 @@
           <a href="index.html" class="lnk">Home</a>
         </li>
         <li>
-          <a href="about.html" class="lnk">About</a>
+          <a href="resume.html" class="lnk">Resume</a>
         </li>
         <li>
           <a href="portfolio.html" class="lnk">Portfolio</a>
