--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,9 @@
   --color-border: #ddd;
   --color-bg-light: #f6f6f6;
 
-  /* Replace 'Roboto Mono' with 'ivy-style-tw' once Adobe Fonts is set up */
-  --font-main: "Roboto Mono", monospace;
+  /* Fonts */
+  --font-main: "ivystyle-tw", "Geist Mono", monospace;
+  --font-sans: "ivystyle-sans", "Geist", sans-serif;
   --font-weight-regular: 400;
   --font-weight-medium: 500;
   --font-weight-bold: 700;
@@ -601,15 +602,15 @@ body:not(.homepage) .section.started {
 
 /* Mouse btn */
 .section.started .mouse_btn {
-  font-size: 24px;
-  color: #f26b38;
+  font-size: 32px;
+  color: var(--color-primary);
   text-align: center;
   position: absolute;
   z-index: var(--z-overlay);
   bottom: calc(100vh * 0.15);
 }
 
-.section.started .mouse_btn .ri-mouse-fill {
+.section.started .mouse_btn .moving-mouse {
   position: relative;
   top: 0px;
   animation: mouse-anim 1s ease-out 0s infinite;
@@ -1031,7 +1032,7 @@ body:not(.homepage) .section.started {
 
 .section.about .image {
   flex: 0 0 auto;
-  margin-top: 30px;
+  margin-top: 28px;
 }
 
 .section.about .image img {
@@ -1067,6 +1068,7 @@ body:not(.homepage) .section.started {
 
 /* Info List */
 .info-list {
+  margin-top: 30px;
   margin-bottom: 42px;
 }
 
@@ -1187,12 +1189,62 @@ body:not(.homepage) .section.started {
   line-height: 1.6;
 }
 
+.clients.list,
+.courses.list {
+  position: relative;
+  margin-top: 20px;
+  font-family: var(--font-sans);
+  font-weight: var(--font-weight-medium);
+  line-height: 2em;
+  font-size: 12px;
+  color: var(--color-text);
+}
+
+.clients.list {
+  text-transform: uppercase;
+}
+
+.clients.list ul li .client,
+.courses.list ul li .course {
+  padding-left: 23px;
+  letter-spacing: 0.05em;
+}
+
+.clients.list ul li .client a,
+.courses.list ul li .course a {
+  letter-spacing: 0;
+  font-weight: 600;
+}
+
+.clients.list ul li .client:before {
+  content: "◆";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  color: var(--color-primary);
+  font-weight: var(--font-weight-bold);
+}
+
+.courses.list ul li .course:before {
+  content: "◇";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  color: var(--color-primary);
+  font-weight: var(--font-weight-bold);
+}
+
 /* ==Infographs Sections== */
 .skills ul {
   margin: 0;
   padding: 0;
   list-style: none;
   font-size: 0;
+}
+
+.skills ul li {
+  position: relative;
+  padding: 0 0 30px 0;
 }
 
 .skills.circles ul {
@@ -1202,11 +1254,6 @@ body:not(.homepage) .section.started {
 .skills.dotted ul {
   margin-left: -30px;
   margin-right: -30px;
-}
-
-.skills ul li {
-  position: relative;
-  padding: 0 0 30px 0;
 }
 
 .skills.dotted ul li {
@@ -1223,16 +1270,6 @@ body:not(.homepage) .section.started {
   display: inline-block;
   vertical-align: top;
   width: 20%;
-}
-
-.skills.list ul li {
-  padding-top: 0;
-  padding-bottom: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  display: inline-block;
-  vertical-align: top;
-  width: 50%;
 }
 
 .skills ul li:last-child {
@@ -1264,25 +1301,26 @@ body:not(.homepage) .section.started {
 
 .skills.list ul li .name {
   padding-left: 23px;
-  position: relative;
 }
 
 .skills.list ul li .name:before {
-  content: "\f121";
+  content: "✓";
   position: absolute;
   left: 0;
-  top: 3px;
+  top: 0;
   display: inline-block;
-  font-family: "Ionicons";
   color: var(--color-primary);
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  text-rendering: auto;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-weight: var(--font-weight-bold);
+}
+
+.skills ul li .context {
+  font-size: 13px;
+  font-weight: 400;
+  color: var(--color-light-text);
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 9px;
+  line-height: 1.6;
 }
 
 .skills ul li .progress {
@@ -1587,7 +1625,7 @@ body:not(.homepage) .section.started {
   width: 90px;
   height: 90px;
   border-radius: 90px;
-  background: #dddddd;
+  background: var(--color-border);
 }
 
 .skills.circles .progress *,
@@ -1619,7 +1657,7 @@ body:not(.homepage) .section.started {
   display: block;
   content: " ";
   border-radius: 50%;
-  background-color: #fff;
+  background-color: var(--color-white);
   width: 0.82em;
   height: 0.82em;
 }
@@ -2367,24 +2405,8 @@ body:not(.homepage) .section.started {
 }
 
 .skills.list ul li {
-  flex: 0 1 calc(48% - 2%);
+  /* flex: 0 1 calc(48% - 2%); */
   padding: 8px 0;
-  position: relative;
-}
-
-.skills.list ul li .name {
-  margin: 0;
-  padding-left: 20px;
-  position: relative;
-}
-
-.skills.list ul li .name:before {
-  content: "✓";
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: var(--color-primary);
-  font-weight: bold;
 }
 
 .skills.list ul li .progress {
@@ -2433,7 +2455,7 @@ body:not(.homepage) .section.started {
   width: 36px;
   text-align: center;
   font-size: 30px;
-  color: #f26b38;
+  color: var(--color-primary);
   margin-right: 15px;
 }
 
@@ -2448,7 +2470,7 @@ body:not(.homepage) .section.started {
 .service-items .service-item .name {
   font-weight: 600;
   font-size: 14px;
-  color: #141414;
+  color: var(--color-dark);
   margin: 6px 0 10px 0;
 }
 
@@ -2460,7 +2482,7 @@ body:not(.homepage) .section.started {
 
 .service-items .service-item p {
   margin: 0;
-  color: #666;
+  color: var(--color-text);
   line-height: 1.6;
   font-size: 13px;
 }
@@ -2686,11 +2708,11 @@ h6 {
   font-size: 14px;
 }
 
-p {
+div p {
   font-size: 13px;
   line-height: 23px;
   padding: 0;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 strong {
@@ -2700,6 +2722,7 @@ strong {
 a {
   color: var(--color-text);
   text-decoration: none;
+  letter-spacing: 0.1em;
   opacity: 1;
   outline: none;
 }
