--- a/components/header.html
+++ b/components/header.html
@@ -9,19 +9,19 @@
     <div class="top-menu">
       <ul>
         <li class="active">
-          <a href="index.html" class="lnk">Home</a>
+          <a href="../index.html" class="lnk">Home</a>
         </li>
         <li>
-          <a href="resume.html" class="lnk">Resume</a>
+          <a href="../resume.html" class="lnk">Resume</a>
         </li>
         <li>
-          <a href="portfolio.html" class="lnk">Portfolio</a>
+          <a href="../portfolio.html" class="lnk">Portfolio</a>
         </li>
         <li>
-          <a href="blog.html" class="lnk">Blog</a>
+          <a href="../blog.html" class="lnk">Blog</a>
         </li>
         <li>
-          <a href="contact.html" class="btn">Contact</a>
+          <a href="../contact.html" class="btn">Contact</a>
         </li>
       </ul>
     </div>
