--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -475,6 +475,7 @@ a.btn:hover,
   z-index: var(--z-overlay);
   opacity: 0;
   display: none;
+  transition: var(--transition-medium);
 }
 
 /* Sidebar Button */
@@ -950,7 +951,7 @@ body:not(.homepage) .section.started {
   text-align: center;
   position: absolute;
   z-index: var(--z-overlay);
-  bottom: calc(100vh * 0.08);
+  bottom: calc(100vh * 0.1);
 }
 
 .section.started .mouse_btn .moving-mouse {
@@ -995,6 +996,9 @@ body:not(.homepage) .section.started {
   }
   .section.started .started-content .h-title.blog_title {
     font-size: 40px;
+  }
+  .section.started .mouse_btn {
+    bottom: calc(100vh * 0.15);
   }
 }
 @media (max-width: 580px) {
