--- a/components/header.html
+++ b/components/header.html
@@ -21,7 +21,7 @@
           <a href="../blog.html" class="lnk">Blog</a>
         </li>
         <li>
-          <a href="../contact.html" class="btn">Contact</a>
+          <a href="../contact.html" class="btn" data-text="Contact">Contact</a>
         </li>
       </ul>
     </div>
