--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -143,7 +143,7 @@
   margin-left: 15px;
 }
 
-.resume-items .resume-item:before {
+.resume-items .resume-item::before {
   content: "";
   position: absolute;
   left: -15px;
@@ -157,7 +157,7 @@
   padding-bottom: 0;
 }
 
-.resume-items .resume-item:last-child:before {
+.resume-items .resume-item:last-child::before {
   display: none;
 }
 
@@ -176,7 +176,7 @@
   background: var(--color-white);
 }
 
-.resume-items .resume-item .date:before {
+.resume-items .resume-item .date::before {
   content: "";
   width: 20px;
   height: 1px;
@@ -227,7 +227,7 @@
   font-weight: 600;
 }
 
-.clients.list ul li .client:before {
+.clients.list ul li .client::before {
   content: "◆";
   position: absolute;
   left: 0;
@@ -236,7 +236,7 @@
   font-weight: var(--font-weight-bold);
 }
 
-.courses.list ul li .course:before {
+.courses.list ul li .course::before {
   content: "◇";
   position: absolute;
   left: 0;
@@ -291,7 +291,7 @@
   padding-bottom: 40px;
 }
 
-.skills ul li:after {
+.skills ul li::after {
   display: none;
 }
 
@@ -314,7 +314,7 @@
   padding-left: 23px;
 }
 
-.skills.list ul li .name:before {
+.skills.list ul li .name::before {
   content: "✓";
   position: absolute;
   left: 0;
@@ -539,105 +539,105 @@
   transform: rotate(0deg);
 }
 
-.skills.circles .progress.p51 .bar:after,
+.skills.circles .progress.p51 .bar::after,
 .skills.circles .progress.p51 .fill,
-.skills.circles .progress.p52 .bar:after,
+.skills.circles .progress.p52 .bar::after,
 .skills.circles .progress.p52 .fill,
-.skills.circles .progress.p53 .bar:after,
+.skills.circles .progress.p53 .bar::after,
 .skills.circles .progress.p53 .fill,
-.skills.circles .progress.p54 .bar:after,
+.skills.circles .progress.p54 .bar::after,
 .skills.circles .progress.p54 .fill,
-.skills.circles .progress.p55 .bar:after,
+.skills.circles .progress.p55 .bar::after,
 .skills.circles .progress.p55 .fill,
-.skills.circles .progress.p56 .bar:after,
+.skills.circles .progress.p56 .bar::after,
 .skills.circles .progress.p56 .fill,
-.skills.circles .progress.p57 .bar:after,
+.skills.circles .progress.p57 .bar::after,
 .skills.circles .progress.p57 .fill,
-.skills.circles .progress.p58 .bar:after,
+.skills.circles .progress.p58 .bar::after,
 .skills.circles .progress.p58 .fill,
-.skills.circles .progress.p59 .bar:after,
+.skills.circles .progress.p59 .bar::after,
 .skills.circles .progress.p59 .fill,
-.skills.circles .progress.p60 .bar:after,
+.skills.circles .progress.p60 .bar::after,
 .skills.circles .progress.p60 .fill,
-.skills.circles .progress.p61 .bar:after,
+.skills.circles .progress.p61 .bar::after,
 .skills.circles .progress.p61 .fill,
-.skills.circles .progress.p62 .bar:after,
+.skills.circles .progress.p62 .bar::after,
 .skills.circles .progress.p62 .fill,
-.skills.circles .progress.p63 .bar:after,
+.skills.circles .progress.p63 .bar::after,
 .skills.circles .progress.p63 .fill,
-.skills.circles .progress.p64 .bar:after,
+.skills.circles .progress.p64 .bar::after,
 .skills.circles .progress.p64 .fill,
-.skills.circles .progress.p65 .bar:after,
+.skills.circles .progress.p65 .bar::after,
 .skills.circles .progress.p65 .fill,
-.skills.circles .progress.p66 .bar:after,
+.skills.circles .progress.p66 .bar::after,
 .skills.circles .progress.p66 .fill,
-.skills.circles .progress.p67 .bar:after,
+.skills.circles .progress.p67 .bar::after,
 .skills.circles .progress.p67 .fill,
-.skills.circles .progress.p68 .bar:after,
+.skills.circles .progress.p68 .bar::after,
 .skills.circles .progress.p68 .fill,
-.skills.circles .progress.p69 .bar:after,
+.skills.circles .progress.p69 .bar::after,
 .skills.circles .progress.p69 .fill,
-.skills.circles .progress.p70 .bar:after,
+.skills.circles .progress.p70 .bar::after,
 .skills.circles .progress.p70 .fill,
-.skills.circles .progress.p71 .bar:after,
+.skills.circles .progress.p71 .bar::after,
 .skills.circles .progress.p71 .fill,
-.skills.circles .progress.p72 .bar:after,
+.skills.circles .progress.p72 .bar::after,
 .skills.circles .progress.p72 .fill,
-.skills.circles .progress.p73 .bar:after,
+.skills.circles .progress.p73 .bar::after,
 .skills.circles .progress.p73 .fill,
-.skills.circles .progress.p74 .bar:after,
+.skills.circles .progress.p74 .bar::after,
 .skills.circles .progress.p74 .fill,
-.skills.circles .progress.p75 .bar:after,
+.skills.circles .progress.p75 .bar::after,
 .skills.circles .progress.p75 .fill,
-.skills.circles .progress.p76 .bar:after,
+.skills.circles .progress.p76 .bar::after,
 .skills.circles .progress.p76 .fill,
-.skills.circles .progress.p77 .bar:after,
+.skills.circles .progress.p77 .bar::after,
 .skills.circles .progress.p77 .fill,
-.skills.circles .progress.p78 .bar:after,
+.skills.circles .progress.p78 .bar::after,
 .skills.circles .progress.p78 .fill,
-.skills.circles .progress.p79 .bar:after,
+.skills.circles .progress.p79 .bar::after,
 .skills.circles .progress.p79 .fill,
-.skills.circles .progress.p80 .bar:after,
+.skills.circles .progress.p80 .bar::after,
 .skills.circles .progress.p80 .fill,
-.skills.circles .progress.p81 .bar:after,
+.skills.circles .progress.p81 .bar::after,
 .skills.circles .progress.p81 .fill,
-.skills.circles .progress.p82 .bar:after,
+.skills.circles .progress.p82 .bar::after,
 .skills.circles .progress.p82 .fill,
-.skills.circles .progress.p83 .bar:after,
+.skills.circles .progress.p83 .bar::after,
 .skills.circles .progress.p83 .fill,
-.skills.circles .progress.p84 .bar:after,
+.skills.circles .progress.p84 .bar::after,
 .skills.circles .progress.p84 .fill,
-.skills.circles .progress.p85 .bar:after,
+.skills.circles .progress.p85 .bar::after,
 .skills.circles .progress.p85 .fill,
-.skills.circles .progress.p86 .bar:after,
+.skills.circles .progress.p86 .bar::after,
 .skills.circles .progress.p86 .fill,
-.skills.circles .progress.p87 .bar:after,
+.skills.circles .progress.p87 .bar::after,
 .skills.circles .progress.p87 .fill,
-.skills.circles .progress.p88 .bar:after,
+.skills.circles .progress.p88 .bar::after,
 .skills.circles .progress.p88 .fill,
-.skills.circles .progress.p89 .bar:after,
+.skills.circles .progress.p89 .bar::after,
 .skills.circles .progress.p89 .fill,
-.skills.circles .progress.p90 .bar:after,
+.skills.circles .progress.p90 .bar::after,
 .skills.circles .progress.p90 .fill,
-.skills.circles .progress.p91 .bar:after,
+.skills.circles .progress.p91 .bar::after,
 .skills.circles .progress.p91 .fill,
-.skills.circles .progress.p92 .bar:after,
+.skills.circles .progress.p92 .bar::after,
 .skills.circles .progress.p92 .fill,
-.skills.circles .progress.p93 .bar:after,
+.skills.circles .progress.p93 .bar::after,
 .skills.circles .progress.p93 .fill,
-.skills.circles .progress.p94 .bar:after,
+.skills.circles .progress.p94 .bar::after,
 .skills.circles .progress.p94 .fill,
-.skills.circles .progress.p95 .bar:after,
+.skills.circles .progress.p95 .bar::after,
 .skills.circles .progress.p95 .fill,
-.skills.circles .progress.p96 .bar:after,
+.skills.circles .progress.p96 .bar::after,
 .skills.circles .progress.p96 .fill,
-.skills.circles .progress.p97 .bar:after,
+.skills.circles .progress.p97 .bar::after,
 .skills.circles .progress.p97 .fill,
-.skills.circles .progress.p98 .bar:after,
+.skills.circles .progress.p98 .bar::after,
 .skills.circles .progress.p98 .fill,
-.skills.circles .progress.p99 .bar:after,
+.skills.circles .progress.p99 .bar::after,
 .skills.circles .progress.p99 .fill,
-.skills.circles .progress.p100 .bar:after,
+.skills.circles .progress.p100 .bar::after,
 .skills.circles .progress.p100 .fill {
   -webkit-transform: rotate(180deg);
   transform: rotate(180deg);
@@ -654,8 +654,8 @@
 }
 
 .skills.circles .progress *,
-.skills.circles .progress *:before,
-.skills.circles .progress *:after {
+.skills.circles .progress *::before,
+.skills.circles .progress *::after {
   -moz-box-sizing: content-box;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
@@ -675,7 +675,7 @@
   z-index: 2;
 }
 
-.skills.circles .progress:after {
+.skills.circles .progress::after {
   position: absolute;
   top: 0.09em;
   left: 0.09em;
@@ -1455,6 +1455,7 @@
 .service-items .service-item {
   flex: 0 1 calc(32% - 3%);
   min-width: 250px;
+  display: flex;
 }
 
 @media (max-width: 840px) {
