--- a/components/header.html
+++ b/components/header.html
@@ -8,20 +8,20 @@
     <!-- full menu -->
     <div class="top-menu">
       <ul>
-        <li class="active">
-          <a href="../index.html" class="lnk">Home</a>
+        <li>
+          <a href="/index.html" class="lnk">Home</a>
         </li>
         <li>
-          <a href="../resume.html" class="lnk">Resume</a>
+          <a href="/resume.html" class="lnk">Resume</a>
         </li>
         <li>
-          <a href="../portfolio.html" class="lnk">Portfolio</a>
+          <a href="/portfolio.html" class="lnk">Portfolio</a>
         </li>
         <li>
-          <a href="../blog.html" class="lnk">Blog</a>
+          <a href="/blog.html" class="lnk">Blog</a>
         </li>
         <li>
-          <a href="../contact.html" class="btn" data-text="Contact">Contact</a>
+          <a href="/contact.html" class="btn" data-text="Contact">Contact</a>
         </li>
       </ul>
     </div>
