--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1370,11 +1370,14 @@ body:not(.homepage) .section.started {
   margin: 0 0 10px 0;
   display: inline-block;
   font-size: 11px;
+  font-weight: 500;
   color: var(--color-text);
   text-transform: uppercase;
   letter-spacing: 0.04em;
   box-shadow: inset 0 -6px 0px var(--color-secondary);
-  font-weight: 500;
+  -moz-box-shadow: inset 0 -6px 0px var(--color-secondary);
+  -webkit-box-shadow: inset 0 -6px 0px var(--color-secondary);
+  -khtml-box-shadow: inset 0 -6px 0px var(--color-secondary);
 }
 
 .box-item .desc .name {
