--- a/assets/css/single-post.css
+++ b/assets/css/single-post.css
@@ -1,4 +1,34 @@
-/* Title Section */
+/* Wrapper Background */
+.section.started.blog-cover {
+  background-size: 100vw 75vh;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+/* Blog post cover art list */
+.anxious-boardgame-cover {
+  background-image: url("/assets/img/blog/anxious-boardgame.png");
+}
+
+/* Blog Cover */
+.blog-cover .started-content {
+  background-color: var(--color-white);
+  opacity: 0.85;
+  padding: 20px 60px;
+  border-radius: 4px;
+  border-bottom: solid 3px var(--color-primary);
+  border-left: solid 2px var(--color-primary);
+  box-shadow: inset -1px 2px 0 var(--color-light-text);
+  -moz-box-shadow: inset -1px 2px 0 var(--color-light-text);
+  -webkit-box-shadow: inset -1px 2px 0 var(--color-light-text);
+  -khtml-box-shadow: inset -1px 2px 0 var(--color-light-text);
+}
+
+.blog_title {
+  font-size: 50px;
+  font-weight: var(--font-weight-medium);
+  text-transform: none;
+}
 
 .date {
   margin: 0 0 10px 0;
@@ -8,76 +38,156 @@
   line-height: 18px;
   font-weight: 500;
   font-size: 11px;
-  color: #f26b38;
-  border: 1px solid #f26b38;
+  color: var(--color-primary);
+  font-family: var(--font-sans);
+  letter-spacing: 0.1em;
+  border: 1px solid var(--color-primary);
 }
 
-/* Post Styles */
+/* Sections */
+.blog-post section {
+  margin-bottom: 60px;
+}
 
-.post-image {
-  margin: 0 0 25px 0;
-  font-size: 0;
+.blog-post h2 {
+  display: inline-block;
+  margin-bottom: 15px;
+  font-weight: var(--font-weight-light);
+  box-shadow: inset 0 -8px 0px var(--color-secondary);
+  -moz-box-shadow: inset 0 -8px 0px var(--color-secondary);
+  -webkit-box-shadow: inset 0 -8px 0px var(--color-secondary);
+  -khtml-box-shadow: inset 0 -8px 0px var(--color-secondary);
 }
-.post-image img {
-  max-width: 100%;
-  height: auto;
+
+.blog-post p {
+  font-family: var(--font-sans);
+  font-size: 14px;
 }
-.single-post-text {
-  font-size: 13px;
-  line-height: 23px;
+
+/* Link Styles */
+section a {
+  color: var(--color-primary);
+  letter-spacing: normal;
 }
-.single-post-text::after {
-  content: "";
-  position: relative;
-  clear: both;
-  display: block;
-}
-.single-post-text img {
-  max-width: 100%;
-  height: auto;
-}
-.single-post-text p a {
-  color: #f26b38;
-}
-.single-post-text p a:hover {
+section a:hover {
   text-decoration: underline;
 }
-.single-post-text blockquote {
-  margin: 25px 0;
-  padding: 0 0 0 20px;
-  font-size: 15px;
-  line-height: 24px;
-  color: #999;
-  font-style: italic;
-  font-weight: 300;
-  border-left: 2px solid #f26b38;
+
+/* Table */
+.table-responsive {
+  width: 100%;
+  overflow-x: auto;
 }
-.single-post-text blockquote code {
+
+.project-table td {
+  padding: 0.8em 1.25em 0 0;
+  width: auto;
+  background: var(--color-white);
+  color: var(--color-light-text);
+  font-weight: var(--font-weight-light);
+}
+.project-table tr:first-child td,
+.project-label {
+  background: var(--color-white);
+  color: var(--color-text);
+  font-family: var(--font-sans);
+  font-weight: var(--font-weight-medium);
+  font-size: 11px;
+  text-align: left;
+  letter-spacing: 0.25em;
+  text-transform: uppercase;
+}
+
+.project-table tr:first-child td {
+  padding: 0 1.25em 0.8em 0;
+  border-bottom: 1px solid var(--color-bg-light);
+}
+
+.project-table-mobile {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  table.project-table {
+    display: none;
+  }
+  .project-table-mobile {
+    display: block;
+  }
+  .project-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0.8em 0;
+    border-bottom: 1px solid var(--color-bg-light);
+    gap: 40px;
+  }
+  .project-label {
+    font-weight: 500;
+    color: var(--color-text);
+    margin-right: 1em;
+    flex-shrink: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
+  }
+  .project-cell {
+    color: var(--color-light-text);
+    font-weight: var(--font-weight-light);
+    text-align: right;
+    line-height: 1.4em;
+  }
+}
+
+/* Quotes */
+.blog-post blockquote {
+  margin: 25px 0;
+  padding: 0 20px;
+  background: var(--color-bg-light);
+  /* font-size: 14px; */
+  line-height: 21px;
+  /* font-family: var(--font-sans); */
+  font-style: italic;
+  letter-spacing: 0.08em;
+  color: var(--color-light-text);
+  font-weight: var(--font-weight-light);
+  border-left: 2px solid var(--color-primary);
+}
+
+.blog-post blockquote code {
   padding: 2px;
   display: inline;
 }
-.single-post-text iframe,
-.single-post-text object {
+
+.blog-post iframe,
+.blog-post object {
   max-width: 100%;
 }
-.single-post-text ul li,
-.single-post-text ol li {
+
+/* lists */
+.blog-post ul li,
+.blog-post ol li {
+  font-family: var(--font-sans);
+  font-size: 14px;
   margin: 5px 0;
   padding: 0 0 0 18px;
   position: relative;
 }
-.single-post-text ol {
+
+.blog-post ol {
   list-style-position: inside;
 }
-.single-post-text ol > li {
+
+.blog-post ol > li {
   margin: 5px 0;
   padding: 0;
   position: relative;
 }
-.single-post-text ul {
+
+.blog-post ul {
   list-style: none;
 }
-.single-post-text ul li::before {
+
+.blog-post ul li::before {
   margin: 0;
   content: "";
   position: absolute;
@@ -89,7 +199,19 @@
   border-radius: 4px;
   -webkit-border-radius: 4px;
 }
-.single-post-text figure {
+
+/* Images */
+.post-image {
+  margin: 0 0 25px 0;
+  font-size: 0;
+}
+
+.post-image img {
+  max-width: 100%;
+  height: auto;
+}
+
+figure {
   margin: 0 0 30px 0;
   max-width: 100%;
 }
@@ -129,6 +251,8 @@
   display: block;
   line-height: 18px;
   font-size: 0px;
+  font-family: var(--font-sans);
+  letter-spacing: 0.1em;
 }
 .post-text-bottom .tags-links span {
   display: inline-block;
