--- a/assets/css/single-post.css
+++ b/assets/css/single-post.css
@@ -381,11 +381,11 @@ figcaption,
   padding: 1em 1em 1.2em 1em;
   border: 1px solid var(--color-dark);
   border-radius: 10px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1), 0 0 var(--color-secondary);
   background: var(--color-bg-light);
   text-align: center;
   cursor: pointer;
-  transition: box-shadow 0.2s, transform 0.2s;
+  transition: var(--transition-slow);
 }
 .media-thumb {
   height: 200px;
@@ -403,7 +403,7 @@ figcaption,
   letter-spacing: 0.05em;
 }
 .media-tile:hover {
-  box-shadow: 0 12px 20px rgba(237, 229, 116, 0.5);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.25), 0 8px var(--color-secondary);
   transform: translateY(-2px) scale(1.03);
   text-decoration: none;
 }
