--- a/components/header.html
+++ b/components/header.html
@@ -9,16 +9,18 @@
     <div class="top-menu">
       <ul>
         <li>
-          <a href="/index.html" class="lnk">Home</a>
+          <a href="/index.html" class="lnk" data-text="Home">Home</a>
         </li>
         <li>
-          <a href="/resume.html" class="lnk">Resume</a>
+          <a href="/resume.html" class="lnk" data-text="Resume">Resume</a>
         </li>
         <li>
-          <a href="/portfolio.html" class="lnk">Portfolio</a>
+          <a href="/portfolio.html" class="lnk" data-text="Portfolio"
+            >Portfolio</a
+          >
         </li>
         <li>
-          <a href="/blog.html" class="lnk">Blog</a>
+          <a href="/blog.html" class="lnk" data-text="Blog">Blog</a>
         </li>
         <li>
           <a href="/contact.html" class="btn" data-text="Contact">Contact</a>
